--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,11 +1,13 @@
-<div class="w-full bg-black text-white text-xl px-2 lg:text-2xl lg:px-4" routerLink="/home">BACK</div>
+<div class="w-full lg:w-1/3">
+    <div class="back-button" [routerLink]="['/home']">BACK</div>
+</div>
 <div class="header">
     ABOUT ME
 </div>
 <div class="flex items-center flex-col lg:flex-row lg:justify-center  lg:p-5">
-    <img class="profile-img" src="/assets/profile-img.png">
-    <div class="font-bold text-2xl lg:text-4xl lg:p-3">Tobias van de Ven</div>
-    <img class="hidden profile-img lg:block" src="../../assets/profile-img-2.jpg">
+    <!-- <img class="profile-img" src="../../assets/profile-img.png"> -->
+    <div class="font-bold mt-4 text-2xl lg:text-4xl lg:p-3">Tobias van de Ven</div>
+    <!-- <img class="hidden profile-img lg:block" src="../../assets/profile-img-2.jpg"> -->
 </div>
 
 <div class="flex flex-col content-container items-center">
@@ -23,8 +25,8 @@
                     <div class="caption">Touring in Switserland</div>
                 </div>
                 <div class="polaroid p-right">
-                    <img src="/assets/about-me/me-img.jpg" alt="Polaroid Image">
-                    <div class="caption">me lol</div>
+                    <img src="/assets/about-me/profile-picture.jpg" alt="Polaroid Image">
+                    <div class="caption">This is me!</div>
                 </div>
                 <div class="polaroid p-right">
                     <img src="/assets/about-me/skiing.jpg" alt="Polaroid Image">
@@ -49,12 +51,12 @@
                     <div class="caption">My cat LEX</div>
                 </div>
                 <div class="polaroid p-left">
-                    <img src="/assets/about-me/honda-civic-2.jpg" alt="Polaroid Image">
-                    <div class="caption">My honda civic EJ9</div>
+                    <img src="/assets/about-me/hona-civic-4.jpeg" alt="Polaroid Image">
+                    <div class="caption">Civic Owner</div>
                 </div>
                 <div class="polaroid p-left">
                     <img src="/assets/about-me/festival.jpg" alt="Polaroid Image">
-                    <div class="caption">At DREAMSCAPE</div>
+                    <div class="caption">Festival with friends</div>
                 </div>
             </div>
         </div>
