--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -6,30 +6,45 @@
 </div>
 <div class="flex items-center flex-col lg:flex-row lg:justify-center  lg:p-5">
     <!-- <img class="profile-img" src="../../assets/profile-img.png"> -->
-    <div class="font-bold mt-4 text-2xl lg:text-4xl lg:p-3">Tobias van de Ven</div>
+    <div class="font-bold mt-4 text-2xl lg:text-4xl lg:p-3">Who Am I?</div>
     <!-- <img class="hidden profile-img lg:block" src="../../assets/profile-img-2.jpg"> -->
 </div>
 
 <div class="flex flex-col content-container items-center">
-
-
-    
     <div class="section lg:w-1/2">
-        Hey, I'm Tobias van de Ven, an 18-year-old software developer based in the Netherlands. Specializing in front-end web development, I'm constantly fueled by a thirst for knowledge, always eager to unravel new concepts and technologies.
+        <p>Hey, I’m <span class="font-bold">Tobias van de Ven</span>, a <span class="font-bold">{{age}}-year-old software developer</span> from the Netherlands. My passion lies in <span class="font-bold">front-end development</span>, crafting intuitive and visually engaging web experiences. I thrive on <span class="font-bold">problem-solving, optimization, and design</span>, always seeking ways to push the boundaries of what's possible.</p>
     </div>
-    <div class="section-img-right lg:w-1/2">
+
+    <div class="section lg:w-1/2 mt-6">
+        <span class="font-bold text-xl">What Drives Me?</span>
+        <ul class="list-disc pl-5 mt-2">
+            <li><span class="font-bold">Tech & Development:</span> I’m obsessed with learning new technologies, frameworks, and best practices to stay ahead in the ever-evolving world of web development.</li>
+            <li><span class="font-bold">Hands-On Engineering:</span> Whether it’s coding or cars, I love breaking things down and figuring out how they work. My Honda Civic is my ongoing project, where I install new parts and fine-tune every detail.</li>
+        </ul>
+    </div>
+
+    <div class="section lg:w-1/2 mt-6">
+        <span class="font-bold text-xl">Beyond the Screen</span>
+        <ul class="list-disc pl-5 mt-2">
+            <li><span class="font-bold">Hitting the slopes:</span> Skiing in France is a must every winter.</li>
+            <li><span class="font-bold">Music festivals:</span> Because what’s life without good vibes?</li>
+            <li><span class="font-bold">Spending time with my cat, LEX:</span> The real boss at home.</li>
+        </ul>
+    </div>
+
+    <div class="section-img-right lg:w-1/2 mt-6">
         <div class="block">
             <div class="polaroid-stack flex">
                 <div class="polaroid p-right">
-                    <img src="/assets/about-me/holliday.jpg" alt="Polaroid Image">
-                    <div class="caption">Touring in Switserland</div>
+                    <img src="/assets/about-me/holliday.jpg" alt="Touring in Switzerland">
+                    <div class="caption">Touring in Switzerland</div>
                 </div>
                 <div class="polaroid p-right">
-                    <img src="/assets/about-me/profile-picture.jpg" alt="Polaroid Image">
+                    <img src="/assets/about-me/profile-picture.jpg" alt="This is me!">
                     <div class="caption">This is me!</div>
                 </div>
                 <div class="polaroid p-right">
-                    <img src="/assets/about-me/skiing.jpg" alt="Polaroid Image">
+                    <img src="/assets/about-me/skiing.jpg" alt="Skiing in France">
                     <div class="caption">Skiing in France</div>
                 </div>
             </div>
@@ -37,31 +52,23 @@
         <div class="text-[9px] h-full px-2 lg:hidden">← click 'n scroll</div>
     </div>
 
-
-
-    <div class="section lg:w-1/2">
-        <span class="font-bold">Some more about me:</span><br>
-        Beyond coding, I find my sanctuary in two places: the gym and my garage. You'll catch me hitting the gym daily, channeling my energy and maintaining a healthy balance. But my other passion lies in my Honda Civic – I'm all about understanding its inner workings, from installing new parts to uncovering how each component fits together. It's an ongoing journey of learning and hands-on experience that I find incredibly fulfilling.
-    </div>
-    <div class="section-img-left flex flex-row lg:w-1/2">
+    <div class="section-img-left flex flex-row lg:w-1/2 mt-6">
         <div class="block">
             <div class="polaroid-stack" onmouseover="alignPolaroids()">
                 <div class="polaroid p-left">
-                    <img src="/assets/about-me/cat.jpg" alt="Polaroid Image">
+                    <img src="/assets/about-me/cat.jpg" alt="My cat LEX">
                     <div class="caption">My cat LEX</div>
                 </div>
                 <div class="polaroid p-left">
-                    <img src="/assets/about-me/hona-civic-4.jpeg" alt="Polaroid Image">
+                    <img src="/assets/about-me/hona-civic-4.jpeg" alt="Civic Owner">
                     <div class="caption">Civic Owner</div>
                 </div>
                 <div class="polaroid p-left">
-                    <img src="/assets/about-me/festival.jpg" alt="Polaroid Image">
+                    <img src="/assets/about-me/festival.jpg" alt="Festival with friends">
                     <div class="caption">Festival with friends</div>
                 </div>
             </div>
         </div>
-
         <div class="text-[9px] h-full px-2 lg:hidden">click 'n scroll →</div>
-
     </div>
 </div>
